test/asm/bank.err
error: Expected constant expression: Section "ROMX_ok1"'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(13)
error: Expected constant expression: `Label_u3`'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(13)
error: Expected constant expression: Section "ROMX_bad"'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(15)
error: Expected constant expression: `Label_u5`'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(15)
error: Expected constant expression: Section "VRAM_bad"'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(17)
error: Expected constant expression: `Label_u7`'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(17)
error: Expected constant expression: Section "SRAM_bad"'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(19)
error: Expected constant expression: `Label_u9`'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(19)
error: Expected constant expression: Section "WRAMX_bad"'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(22)
error: Expected constant expression: `Label_u12`'s bank is not known
    at bank.asm::def_sect(8) <- bank.asm(22)
error: `BANK` argument must be a label
    at bank.asm(26)
Assembly aborted with 11 errors!
